[gd_scene load_steps=61 format=3 uid="uid://diiquw5j607my"]

[ext_resource type="Shader" path="res://Scenes/Player/player.gdshader" id="1_0kot3"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_sh3vc"]
[ext_resource type="Texture2D" uid="uid://4iyvj3ug3ij4" path="res://Assets/Player/Spaceship.png" id="2_bkv4d"]
[ext_resource type="PackedScene" uid="uid://c5d461hlay6qt" path="res://Scenes/Particles/ParticleQueue/particle_queue.tscn" id="2_fyq6s"]
[ext_resource type="PackedScene" uid="uid://dc7l4lmn7n5ji" path="res://Scenes/Particles/hit_particles.tscn" id="5_tvmrv"]

[sub_resource type="Gradient" id="Gradient_5gk1m"]
offsets = PackedFloat32Array(0.22, 0.573333, 1)
colors = PackedColorArray(1, 0, 0, 1, 1, 0.494118, 0, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_nyboq"]
min_value = 0.2
_data = [Vector2(0.0561798, 0.879121), 0.0, 0.0, 0, 0, Vector2(0.97191, 0.274725), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_jbbdh"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.824176), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_vnfnp"]
offsets = PackedFloat32Array(0.526667, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aktxi"]
shader = ExtResource("1_0kot3")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1p0d6"]
atlas = ExtResource("2_bkv4d")
region = Rect2(512, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsftd"]
atlas = ExtResource("2_bkv4d")
region = Rect2(544, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0n5c"]
atlas = ExtResource("2_bkv4d")
region = Rect2(576, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml8vr"]
atlas = ExtResource("2_bkv4d")
region = Rect2(640, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe80h"]
atlas = ExtResource("2_bkv4d")
region = Rect2(672, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln6g0"]
atlas = ExtResource("2_bkv4d")
region = Rect2(704, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoaku"]
atlas = ExtResource("2_bkv4d")
region = Rect2(736, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lb1yl"]
atlas = ExtResource("2_bkv4d")
region = Rect2(768, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnpjn"]
atlas = ExtResource("2_bkv4d")
region = Rect2(800, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnocq"]
atlas = ExtResource("2_bkv4d")
region = Rect2(768, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nclgv"]
atlas = ExtResource("2_bkv4d")
region = Rect2(736, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkq2h"]
atlas = ExtResource("2_bkv4d")
region = Rect2(704, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wiud"]
atlas = ExtResource("2_bkv4d")
region = Rect2(672, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y54uy"]
atlas = ExtResource("2_bkv4d")
region = Rect2(640, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qfcf"]
atlas = ExtResource("2_bkv4d")
region = Rect2(576, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v44im"]
atlas = ExtResource("2_bkv4d")
region = Rect2(544, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_25w8y"]
atlas = ExtResource("2_bkv4d")
region = Rect2(512, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwqkq"]
atlas = ExtResource("2_bkv4d")
region = Rect2(480, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4pjg"]
atlas = ExtResource("2_bkv4d")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y42n6"]
atlas = ExtResource("2_bkv4d")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im2m8"]
atlas = ExtResource("2_bkv4d")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_okwu6"]
atlas = ExtResource("2_bkv4d")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgp1t"]
atlas = ExtResource("2_bkv4d")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm1ho"]
atlas = ExtResource("2_bkv4d")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_80sfk"]
atlas = ExtResource("2_bkv4d")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fd6q"]
atlas = ExtResource("2_bkv4d")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r08ix"]
atlas = ExtResource("2_bkv4d")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlp04"]
atlas = ExtResource("2_bkv4d")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gopll"]
atlas = ExtResource("2_bkv4d")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnw62"]
atlas = ExtResource("2_bkv4d")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5r7s"]
atlas = ExtResource("2_bkv4d")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq8qo"]
atlas = ExtResource("2_bkv4d")
region = Rect2(416, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4acqk"]
atlas = ExtResource("2_bkv4d")
region = Rect2(448, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0diry"]
atlas = ExtResource("2_bkv4d")
region = Rect2(480, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2ron"]
atlas = ExtResource("2_bkv4d")
region = Rect2(512, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2bes"]
atlas = ExtResource("2_bkv4d")
region = Rect2(544, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lcc1"]
atlas = ExtResource("2_bkv4d")
region = Rect2(576, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sad37"]
atlas = ExtResource("2_bkv4d")
region = Rect2(608, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb07h"]
atlas = ExtResource("2_bkv4d")
region = Rect2(640, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15qko"]
atlas = ExtResource("2_bkv4d")
region = Rect2(672, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1bho"]
atlas = ExtResource("2_bkv4d")
region = Rect2(704, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw4pi"]
atlas = ExtResource("2_bkv4d")
region = Rect2(736, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox2pw"]
atlas = ExtResource("2_bkv4d")
region = Rect2(768, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0fc4"]
atlas = ExtResource("2_bkv4d")
region = Rect2(800, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmthp"]
atlas = ExtResource("2_bkv4d")
region = Rect2(832, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr8cf"]
atlas = ExtResource("2_bkv4d")
region = Rect2(864, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_1nm4w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p0d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsftd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0n5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml8vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe80h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoaku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lb1yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnpjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnocq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nclgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkq2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wiud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y54uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qfcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v44im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwqkq")
}],
"loop": true,
"name": &"Default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4pjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y42n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im2m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okwu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgp1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm1ho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80sfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fd6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r08ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlp04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gopll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnw62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5r7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq8qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4acqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0diry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2ron")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2bes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lcc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sad37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb07h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15qko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1bho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw4pi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox2pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0fc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmthp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr8cf")
}],
"loop": false,
"name": &"StartUp",
"speed": 50.0
}]

[sub_resource type="Animation" id="Animation_pbty5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bn5uw"]
resource_name = "hit"
length = 0.25
step = 0.005
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crus3"]
_data = {
"RESET": SubResource("Animation_pbty5"),
"hit": SubResource("Animation_bn5uw")
}

[node name="Player" type="CharacterBody2D"]
process_mode = 3
collision_layer = 2
collision_mask = 5
script = ExtResource("1_sh3vc")

[node name="Particles" type="Node2D" parent="."]

[node name="ParticleQueue" parent="Particles" instance=ExtResource("2_fyq6s")]
particle = ExtResource("5_tvmrv")

[node name="ExplosionParticles" type="CPUParticles2D" parent="Particles"]
emitting = false
amount = 200
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 301.0
scale_amount_max = 12.0
color = Color(1, 0.478431, 0, 1)
color_ramp = SubResource("Gradient_5gk1m")

[node name="FireParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2(-23, 0)
amount = 200
lifetime = 0.5
randomness = 1.0
lifetime_randomness = 1.0
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(1, 40)
spread = 12.38
gravity = Vector2(-980, 0)
scale_amount_min = 3.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_nyboq")
color = Color(0.67451, 0.196078, 0.196078, 1)
hue_variation_min = -1.0
hue_variation_max = -1.0
hue_variation_curve = SubResource("Curve_jbbdh")

[node name="AuraParticles" type="CPUParticles2D" parent="Particles"]
amount = 100
lifetime = 0.4
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_max = 3.0
color = Color(0.858824, 0.658824, 1, 1)
color_ramp = SubResource("Gradient_vnfnp")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_aktxi")
position = Vector2(-26, 0)
rotation = 1.5708
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1nm4w")
animation = &"Default"
frame_progress = 0.774806

[node name="Collider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-17, -39, 25, -39, 28, -9, 64, -3, 64, 3, 28, 9, 25, 39, -17, 39, -20, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crus3")
}

[connection signal="finished" from="Particles/ExplosionParticles" to="." method="_on_explosion_particles_finished"]
